# ml-project-template

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  container.def  environment.yaml  example.env  pyproject.toml
docker/: Dockerfile
scripts/: train.py
scripts/conf/: base_conf.py
scripts/lib/utils/: helpers.py  job.py  log.py  run.py  wandb.py
src/common/logging/: logger.py  wandb.py
src/common/utils/: config.py  constants.py
src/conf/: base_conf.py
src/configs/logging/: wandb.py
src/configs/runs/: base.py
src/configs/stores/: main.py
src/runs/base/: job.py  main.py  run.py
src/scripts/: train.py
